# rtic-timeout-investigation

./: .embed.toml  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: dummy_future.rs  inspect_size.rs  main.rs
